<resources>
    <string name="app_name">CommunityEventsSA</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="discover">Discover</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="create_event">Create Event</string>
    <string name="settings">Settings</string>
    <string name="share_event">Share Event</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="isizulu">IsiZulu</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="search_hint">Search for events...</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="view_event">View Event</string>
    <string name="profile_info">Profile Information</string>
    <string name="interests">Event Interests</string>
    <string name="app_prefs">App Preferences</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="system_settings">System Settings</string>

    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="physical_address">Physical Address</string>
    <string name="gender">Gender</string>
    <string name="short_bio">Short Bio</string>
    <string name="sports">Sports</string>
    <string name="education">Education</string>
    <string name="music">Music</string>
    <string name="business">Business</string>
    <string name="volunteering">Volunteering</string>
    <string name="social_activities">Social Activities</string>
    <string name="technology">Technology</string>
    <string name="health_wellness">Health &amp; Wellness</string>
    <string name="environment">Environment</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="private_profile">Private Profile</string>
    <string name="data_saver">Data Saver</string>
    <string name="help_center">Help Center</string>
    <string name="report_problem">Report a Problem</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="event_fun_run">Community Fun Run</string>
    <string name="event_food_drive">Community Food Drive</string>
    <string name="event_cleanup">Community Clean-Up</string>
    <string name="event_sports_day">Youth Sports Day</string>
    <string name="event_workshop">Career Workshop</string>
    <string name="event_concert">Local Music Concert</string>

    <string name="search_result_found">Event Found: %1$s!</string>
    <string name="search_no_result">No events found matching your search.</string>
    <string name="event_bookmarked">Event saved to bookmarks!</string>
    <string name="event_removed">Event removed from bookmarks.</string>
    <string name="user_profile_title">User Profile</string>
    <string name="member_label">Community Events SA Member</string>
    <string name="filter_events">Filter Events</string>
    <string name="events_near_you">Events Near You</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="recommended">Recommended for You</string>
    <string name="discover_header_desc">Find events happening near you</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="dashboard_sub_header">Find something happening near you.</string>
    <string name="select_date">Select Date</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="bookmarks_desc">Events you\'ve saved for later</string>
    <string name="remove">Remove</string>
    <string name="empty_bookmarks">No saved events yet.</string>
    <string name="save_changes">Save Changes</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="search_results">Search Results</string>
    <string name="close">Close</string>
    <string name="save_bookmark_hint">Long press event to bookmark</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="save_to_bookmarks">Save to Bookmarks</string>

    <string name="event_title_label">Event Title</string>
    <string name="event_desc_label">Event Description</string>
    <string name="select_date_time">Select Date &amp; Time</string>
    <string name="event_location_label">Event Location</string>
    <string name="save_event">Save Event</string>
    <string name="fill_all_fields">Please fill all fields</string>
</resources>